--- a/style.css
+++ b/style.css
@@ -684,6 +684,11 @@ article .icon {
 .project-category-title {
   text-align: center;
   margin-top: 1rem;
+  margin-bottom: 0.3rem;
+}
+
+.project-slider-container + .project-category-title {
+  margin-top: 5rem;
 }
 
 .project-slider-container {
@@ -693,7 +698,7 @@ article .icon {
   white-space: nowrap;
   scrollbar-width: none; /* Firefox */
   scroll-behavior: auto; /* Ensure instant jumps for infinite loop */
-  padding: 2rem 0;
+  padding: 1rem 0 2rem 0;
   mask-image: linear-gradient(to right, transparent, black 5%, black 95%, transparent);
   -webkit-mask-image: linear-gradient(to right, transparent, black 5%, black 95%, transparent);
 }
