--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -88,9 +88,10 @@
     text-align: center;
   }
   .section__pic-container {
-    width: auto;
+    width: 146vw;
     height: 46vw;
     justify-content: center;
+    margin: 0 auto 2rem;
   }
   .section__text__p2 {
     font-size: 1.25rem;
